# mlp-rust

./: .gitignore  Cargo.toml  README.md
benches/: mlp_benchmark.rs
comparisons/: sklearn_and_tensorflow_benchmark.ipynb
src/: lib.rs  main.rs  prelude.rs
src/custom_types/: custom_traits.rs  mod.rs  numerical_traits.rs  tensor_traits.rs
src/data_set/: in_memory.rs  mod.rs  utility.rs
src/layer/: activation.rs  batch_normalization.rs  bias.rs  chain.rs  dense.rs  input_normalization.rs  mod.rs  nested.rs  normalization.rs  output.rs  output_and_loss.rs  weight.rs
src/loss/: loss.rs
src/mlp/: activation_function.rs  loss_function.rs  mod.rs  tensor.rs  type_def.rs
src/model/: mlp.rs  mod.rs  model.rs  serial.rs
src/optimizer/: gradient_descent.rs  mod.rs
src/propagation/: mod.rs  propagation_manager.rs
src/regularization/: mod.rs  weight_regularization.rs
src/traits/: data_set_traits.rs  mod.rs  model_traits.rs  numerical_traits.rs  optimizer_traits.rs  tensor_traits.rs
src/util/: linalg.rs
src/utility/: array.rs  counter.rs  linalg.rs  math.rs  mod.rs
tests/: activation_test.rs  batch_norm_test.rs  bias_test.rs  data_set_in_memory_test.rs  dense_test.rs  mlp_test.rs
