[package]
name = "mlp-rust"
version = "0.1.0"
authors = ["Shuyang Sun <sunbuffett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
num_cpus = "1.13.0"
num-traits = "0.2.12"
ndarray = { version = "0.13.1", features = ["rayon"] }
#ndarray-linalg = { version = "0.12.1", features = ["openblas"] }
ndarray-rand = "0.11.0"
ndarray-stats = "0.3.0"
rand = "0.7.3"
rayon = "1.5.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false
